Slick responstive slider

--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
       </div>
 
       <div class="slick-slider">
-        <h1 style="text-align: center">Slick Slider Resposive Slide</h1>
+        <h1 style="text-align: center">Slick Responstive Slider</h1>
 
         <div class="slider">
           <div class="slide">
