--- a/index.html
+++ b/index.html
@@ -73,6 +73,29 @@
       .slick-slide {
         margin: 0 10px;
       }
+
+      /* Slick Dots Css */
+
+      .slick-dots {
+        display: flex;
+        justify-content: space-evenly;
+        align-items: center;
+      }
+
+      .slick-dots > li {
+        list-style: none;
+      }
+
+      .slick-dots > li > button {
+        background-color: transparent;
+        border: none;
+        font-weight: 700;
+      }
+
+      .slick-active > button {
+        text-decoration: underline;
+        color: red;
+      }
     </style>
     <title>Jquery Practice</title>
   </head>
@@ -174,7 +197,7 @@
         slidesToScroll: 1,
         autoplay: true,
         arrows: false,
-        dots: false,
+        dots: true,
         pauseOnHover: false,
         responsive: [
           {
